tests/NormalTests/paczka1/small_fuzzy/18457156.err
Error in line 3: 9HNX2 S889 27,9
Error in line 5: 9pLG S889 86,7
Error in line 8: 9pLG S795 48,5
Error in line 6: 3x1T25nhJGl S978 94,6
